@@ -1,6 +1,6 @@
 <?php
 /***************************************************************************
- *   Copyright (C) 2006 by Konstantin V. Arkhipov                          *
+ *   Copyright (C) 2006-2007 by Konstantin V. Arkhipov                     *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -31,9 +31,11 @@
 		const VARCHAR			= 0x000109;
 		const TEXT				= 0x00000A;
 		
-		const DATE				= 0x00000B;
-		const TIME				= 0x10100C;
-		const TIMESTAMP			= 0x10100D;
+		const FULLTEXT			= 0x00000B;
+		
+		const DATE				= 0x00000C;
+		const TIME				= 0x10100D;
+		const TIMESTAMP			= 0x10100E;
 		
 		const HAVE_SIZE			= 0x000100;
 		const HAVE_PRECISION	= 0x001000;
@@ -61,6 +63,8 @@
 			self::CHAR			=> 'CHARACTER',
 			self::VARCHAR		=> 'CHARACTER VARYING',
 			self::TEXT			=> 'TEXT',
+			
+			self::FULLTEXT		=> 'FULLTEXT',
 			
 			self::DATE			=> 'DATE',
 			self::TIME			=> 'TIME',
@@ -172,6 +176,11 @@
 				&& $dialect instanceof LiteDialect
 			) {
 				return $this->names[self::INTEGER];
+			} elseif ($this->id == self::FULLTEXT) {
+				if ($dialect instanceof PostgresDialect)
+					return 'tsvector';
+				
+				throw new UnimplementedFeatureException();
 			}
 			
 			return $this->name;
